# Trellis

./: .gitignore  CLAUDE.md  README.md  WORKLOG.md  demo.csv  design.md  pyproject.toml
.memory-backup/: MEMORY.md  RESTORE-README.md  design-philosophy-open-extensibility.md  git-commit-on-mount.md  simplicity-over-clever-solvers.md  trellis-file-io-csv-only.md  trellis-pickup-checklist.md  trellis-publication-gated-on-client.md  trellis-roadmap-position.md  trellis-test-command.md  trellis-tui-in-repo-frontend.md  write-protocol-mount-folders.md
docs/: keymap-plugin.md  plugin-example.md
pytest-cache-files-4sh3h0xt/v/cache/: nodeids
scripts/: setup-venv.ps1  setup-venv.sh
src/trellis/: __init__.py  _plugins.py
src/trellis/core/: __init__.py  address.py  cell.py  events.py  range.py  sheet.py  workbook.py
src/trellis/formula/: __init__.py  ast.py  builtins.py  errors.py  evaluator.py  functions.py  lexer.py  parser.py  recalc.py  shift.py
src/trellis/io/: __init__.py  csv.py
tests/: test_address.py  test_cell.py  test_events.py  test_formula_builtins.py  test_formula_errors.py  test_formula_evaluator.py  test_formula_functions.py  test_formula_lexer.py  test_formula_parser.py  test_formula_shift.py  test_io_csv.py  test_plugin_discovery.py  test_public_api.py  test_range.py  test_recalc.py  test_sheet.py  test_workbook.py
